--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoLenguajes
 endorsed.classpath=
 excludes=
-file.reference.ojdbc11.jar=C:\\Users\\barah\\OneDrive - Universidad Fid\u00e9litas\\Documentos\\ojdbc11.jar
+file.reference.ojdbc11.jar=C:\\Users\\darie\\Downloads\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
