Se agregan vistas para empleados, ocupacines y produtos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoLenguajes
 endorsed.classpath=
 excludes=
-file.reference.ojdbc11.jar=C:\\Users\\darie\\OneDrive\\Documents\\NetBeansProjects\\ojdbc11.jar
+file.reference.ojdbc11.jar=C:\\Users\\Usuario\\Downloads\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
