Vistas de lectura para clientes y categoria

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoLenguajes
 endorsed.classpath=
 excludes=
 file.reference.ojdbc11.jar=C:\\Users\\Usuario\\Downloads\\ojdbc11.jar
+file.reference.ojdbc11.jar-1=lib\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc11.jar}
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.ojdbc11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
